--- a/.github/workflows/update_daily.yml
+++ b/.github/workflows/update_daily.yml
@@ -1,36 +1,36 @@
 name: Update Dashboard
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '30 10 * * *'  # Runs daily at 10:30 UTC (which is 4 PM IST)
-  workflow_dispatch:        # Allows manual trigger
+    - cron: '30 10 * * 1-5'  # 4PM IST on weekdays
+
+permissions:
+  contents: write
 
 jobs:
-  build:
+  update-dashboard:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+      - name: Check out the repo
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    - name: Run portfolio script
-      run: python source.py
-        
-    - name: Commit and push changes
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/sm-thamizha/pnl-dashboard-trial.git
-        git add index.html
-        git commit -m "Auto update dashboard" || echo "No changes to commit"
-        git push
+      - name: Run update script
+        run: python source.py
+
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add index.html
+          git commit -m "Auto update dashboard" || echo "No changes"
+          git push
