--- a/.github/workflows/update_daily.yml
+++ b/.github/workflows/update_daily.yml
@@ -1,4 +1,4 @@
-name: Update Dashboard
+name: Update Dashboard and Deploy
 
 on:
   workflow_dispatch:
@@ -7,17 +7,22 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
-  update-dashboard:
+  update-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
@@ -27,16 +32,14 @@ jobs:
       - name: Run update script
         run: python source.py
 
-      - name: Commit and push changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add index.html
-          git commit -m "Auto update dashboard" || echo "No changes"
-          git push
-          
-      - name: Deploy to GitHub Pages
-        uses: actions/configure-pages@v2
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload Pages Artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          branch: main
-          folder: .
+          path: '.'  # This assumes index.html is at the root
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
