--- a/.github/workflows/update_daily.yml
+++ b/.github/workflows/update_daily.yml
@@ -3,7 +3,7 @@ name: Update Dashboard and Deploy
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 10 * * 1-5'  # 4PM IST on weekdays
+    - cron: '30 10 * * 1-5'
 
 permissions:
   contents: write
@@ -32,13 +32,16 @@ jobs:
       - name: Run update script
         run: python source.py
 
+      - name: Prefetch upload-artifact
+        uses: actions/upload-artifact@v3
+
       - name: Set up GitHub Pages
         uses: actions/configure-pages@v3
 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v2
         with:
-          path: '.'  # or the folder where index.html is
+          path: '.'
 
       - name: Deploy to GitHub Pages
         id: deployment
