--- a/.github/workflows/update_daily.yml
+++ b/.github/workflows/update_daily.yml
@@ -1,28 +1,24 @@
-name: Update Dashboard and Deploy
+name: Update and Deploy Dashboard
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '30 10 * * 1-5'
+    - cron: '30 10 * * 1-5'  # 4 PM IST on weekdays (triggered via cron)
 
 permissions:
   contents: write
-  pages: write
-  id-token: write
+  pages: write  # Allow GitHub Pages deployment
+  id-token: read  # Allow for deployment using GitHub Pages action
 
 jobs:
-  update-deploy:
+  update-dashboard:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - name: Check out the repo
+        uses: actions/checkout@v2
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
           python-version: '3.11'
 
@@ -30,19 +26,23 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run update script
-        run: python source.py
+        run: python source.py  # This updates the index.html
 
-      - name: Prefetch upload-artifact
-        uses: actions/upload-artifact@v3
-
-      - name: Set up GitHub Pages
-        uses: actions/configure-pages@v3
-
-      - name: Upload artifact for GitHub Pages
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: '.'
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add index.html
+          git commit -m "Auto update dashboard" || echo "No changes"
+          git push
 
       - name: Deploy to GitHub Pages
-        id: deployment
+        uses: actions/configure-pages@v2  # Configures the deployment
+        with:
+          branch: main  # The branch you are pushing changes to
+          folder: .  # The folder containing your HTML file (root if it's directly in the root)
+
+      - name: Deploy site
         uses: actions/deploy-pages@v2
+        with:
+          branch: main  # The branch that gets deployed
