--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,6 +1,9 @@
 name: Update and Deploy Dashboard
 
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '30 10 * * 1-5'  # 4 PM IST on weekdays (triggered via cron)
   workflow_dispatch:
